--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+ <title>speedify WAN status</title>
+ <meta http-equiv="refresh" content="5" />
 </head>
 <body>
 <img src="3wan4pings.svg"><br>
